# lcheck

./: Makefile  README.md  dune  dune-project  lCheck.ml  lcheck.opam
example/: example.ml
